primeira parte da construção do site

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paloma&Patrick</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    
+    <div class="container-central">
+<div class="nome-Noivos"> 
+ <h1> Paloma & Patrick</h1>
+</div>
+<div class="centro-divisoria"></div>
+  <p> a imagem que fica no meio </p>
+<div class="rodape"></div>
+   <nav>links dos noivos</nav> 
+    </div>
 </body>
 </html>
