commit nova font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paloma&Patrick</title>
     <link rel="stylesheet" href="Style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container-central">
@@ -12,7 +13,7 @@
  <h1> Paloma & Patrick</h1>
 </div>
 <div class="centro-divisoria"></div>
-  <p> a imagem que fica no meio </p>
+  
 <div class="rodape"></div>
    <nav>links dos noivos</nav> 
     </div>
