--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Paloma&Patrick</title>
     <link rel="stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container-central">
@@ -15,7 +16,13 @@
 <div class="centro-divisoria"></div>
   
 <div class="rodape"></div>
-   <nav>links dos noivos</nav> 
+   <nav><a href="listapresentes.html">
+    <img src="./icons/gift.png" alt="Imagem de presentes"></a>
+
+    <a href="contato.html">
+        <img src="./icons/contact-us.png" alt="contato"></a>
+
+</nav> 
     </div>
 </body>
 </html>
