commitando o result da lista só falta o contato

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 <div class="centro-divisoria"></div>
   
 <div class="rodape"></div>
-   <nav><a href="listapresentes.html">
+   <nav>
+    <a href="listapresentes.html">
     <img src="./icons/gift.png" alt="Imagem de presentes"></a>
 
     <a href="contato.html">
-        <img src="./icons/contact-us.png" alt="contato"></a>
+    <img src="./icons/contact-us.png" alt="contato"></a>
 
 </nav> 
     </div>
