att card principal
ss

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container-central">
 <div class="nome-Noivos"> 
- <h1> Paloma & Patrick</h1>
+ <h1> Paloma e Patrick</h1>
 </div>
 <div class="centro-divisoria"></div>
   
