--- a/listapresentes.html
+++ b/listapresentes.html
@@ -13,7 +13,7 @@
 <body>
     <div class="Div-geral">
         
-      <h1 class="h1-list">Lista de Presentes de Casamento: </h1>
+      <h1 class="h1-list">Lista de Presentes: </h1>
     
         <ul type = none>
             <li>Aparelho de jantar</li>
