arrumando erro ortografico

--- a/listapresentes.html
+++ b/listapresentes.html
@@ -29,7 +29,7 @@
             <li>Conjunto de talheres</li>
             <li>Aspirador de pó</li>
             <li>Conjunto de sobremesa</li>
-            <li>ogo de assadeiras</li>
+            <li>jogo de assadeiras</li>
             <li>Garrafa térmica</li>
             <li>Escorredor de louças</li>
             <li>Lixeira de pia de cozinha</li>
